# qz_boilerplate

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
admin/: router.py
admin/static/: admin.css
admin/templates/: base.html  dashboard.html  logs.html  prompts.html  roadmap.html
api/: config.py  database.py  exceptions.py  main.py  middleware.py  security.py
api/models/: __init__.py  base.py  hello.py  system.py
api/routers/: hello.py
api/schemas/: base.py  hello.py  pagination.py
api/services/: crud_base.py
api/utils/: audit_log.py  claude_client.py  db_logger.py  email_service.py  memory_service.py  prompt_service.py
docker/: docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml
docker/caddy/: Caddyfile.dev  Caddyfile.prod
docker/dockerfiles/: Dockerfile.api  Dockerfile.scheduler
docker/postgres/init/: 01_schema.sql
docs/: api_reference.md  architecture.md  deployment.md  roadmap.md
env/: .env.dev.config  .env.example  .env.prod.config  .env.secrets.example  .env.test.config
migrations/: env.py
migrations/versions/: 0001_baseline.py
scheduler/: main.py
scripts/: create_network.sh  db_dump_dev.sh  db_restore_test.sh  deploy_prod.sh  deploy_test.sh  init_project.sh  rename_project.sh  rotate_api_key.sh
tests/: conftest.py
tests/fixtures/: base_data.sql
tests/integration/: test_health.py  test_hello.py  test_prompts.py
tests/unit/: test_pagination.py  test_security.py
