[project]
name = "myapp"
version = "0.1.0"
description = "FastAPI production boilerplate"
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    # Core
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "jinja2>=3.1.4",

    # Database
    "sqlalchemy>=2.0.41",
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.2.10",
    "alembic>=1.14.0",

    # Configuration
    "pydantic>=2.11.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.1.0",

    # Scheduler
    "apscheduler>=3.10,<4",
    "pytz>=2025.2",

    # AI
    "anthropic>=0.40.0",

    # Email
    "postmarker>=1.0",

    # HTTP
    "httpx>=0.28.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "requires_clean_data: tests that require a fresh database (skipped in test-from-dev)",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]  # Line length handled by formatter
